// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a 1`] = `
<a
  className="sc-kGXeez jzaFED"
/>
`;

exports[`should render abbr 1`] = `
<abbr
  className="sc-hSdWYo bgbEef"
/>
`;

exports[`should render article 1`] = `
<article
  className="sc-dnqmqq iabYNs"
/>
`;

exports[`should render aside 1`] = `
<aside
  className="sc-iwsKbI ewaJoQ"
/>
`;

exports[`should render audio 1`] = `
<audio
  className="sc-gGBfsJ kqehYj"
/>
`;

exports[`should render blockquote 1`] = `
<blockquote
  className="sc-gZMcBi cgEaDu"
/>
`;

exports[`should render box 1`] = `
<div
  className="sc-bxivhb jkeobA"
/>
`;

exports[`should render button 1`] = `
<button
  className="sc-fBuWsC mXWZe"
/>
`;

exports[`should render caption 1`] = `
<caption
  className="sc-jqCOkK fApMEg"
/>
`;

exports[`should render cite 1`] = `
<cite
  className="sc-cvbbAY cNZbqa"
/>
`;

exports[`should render code 1`] = `
<code
  className="sc-jDwBTQ cffMwB"
/>
`;

exports[`should render col 1`] = `
<col
  className="sc-dNLxif itEJmy"
/>
`;

exports[`should render colgroup 1`] = `
<colgroup
  className="sc-jbKcbu hFmpVE"
/>
`;

exports[`should render data 1`] = `
<data
  className="sc-brqgnP dgnERZ"
/>
`;

exports[`should render dd 1`] = `
<dd
  className="sc-hzDkRC gRxfXC"
/>
`;

exports[`should render del 1`] = `
<del
  className="sc-kkGfuU fNJInZ"
/>
`;

exports[`should render dfn 1`] = `
<dfn
  className="sc-jWBwVP dhddiu"
/>
`;

exports[`should render div 1`] = `
<div
  className="sc-ifAKCX erIHvY"
/>
`;

exports[`should render dl 1`] = `
<dl
  className="sc-Rmtcm dxTNc"
/>
`;

exports[`should render dt 1`] = `
<dt
  className="sc-bRBYWo beDnjV"
/>
`;

exports[`should render em 1`] = `
<em
  className="sc-dxgOiQ ciquOb"
/>
`;

exports[`should render fieldset 1`] = `
<fieldset
  className="sc-fAjcbJ dlMWhz"
/>
`;

exports[`should render figcaption 1`] = `
<figcaption
  className="sc-iRbamj gnYQnI"
/>
`;

exports[`should render figure 1`] = `
<figure
  className="sc-gPEVay cTDjEZ"
/>
`;

exports[`should render flex 1`] = `
<div
  className="sc-htpNat kTImvZ"
/>
`;

exports[`should render footer 1`] = `
<footer
  className="sc-gzVnrw jnkeEL"
/>
`;

exports[`should render form 1`] = `
<form
  className="sc-eqIVtm jdycWN"
/>
`;

exports[`should render h1 1`] = `
<h1
  className="sc-VigVT iDkhhq"
/>
`;

exports[`should render h2 1`] = `
<h2
  className="sc-jTzLTM criEjn"
/>
`;

exports[`should render h3 1`] = `
<h3
  className="sc-fjdhpX ekIcbt"
/>
`;

exports[`should render h4 1`] = `
<h4
  className="sc-jzJRlG bEbDqy"
/>
`;

exports[`should render h5 1`] = `
<h5
  className="sc-cSHVUG kRIGMk"
/>
`;

exports[`should render h6 1`] = `
<h6
  className="sc-kAzzGY iFQHDL"
/>
`;

exports[`should render header 1`] = `
<header
  className="sc-EHOje jKVjJH"
/>
`;

exports[`should render hgroup 1`] = `
<hgroup
  className="sc-gqjmRU gEXqVQ"
/>
`;

exports[`should render image 1`] = `
<img
  className="sc-bbmXgH hlZIeP"
/>
`;

exports[`should render img 1`] = `
<img
  className="sc-uJMKN jRjOed"
/>
`;

exports[`should render input 1`] = `
<input
  className="sc-kjoXOD iyiHXz"
/>
`;

exports[`should render inputsubmit 1`] = `
<input
  className="sc-dVhcbM bpKeLO"
/>
`;

exports[`should render label 1`] = `
<label
  className="sc-gisBJw ffApDV"
/>
`;

exports[`should render legend 1`] = `
<legend
  className="sc-caSCKo esMbcR"
/>
`;

exports[`should render li 1`] = `
<li
  className="sc-csuQGl iYirto"
/>
`;

exports[`should render linkbutton 1`] = `
<a
  className="sc-fMiknA cLoDha"
/>
`;

exports[`should render main 1`] = `
<main
  className="sc-bZQynM jTfdYK"
/>
`;

exports[`should render mark 1`] = `
<mark
  className="sc-iAyFgw ezLHvh"
/>
`;

exports[`should render nav 1`] = `
<nav
  className="sc-jhAzac gascOi"
/>
`;

exports[`should render ol 1`] = `
<ol
  className="sc-gipzik PWOoO"
/>
`;

exports[`should render option 1`] = `null`;

exports[`should render p 1`] = `
<p
  className="sc-kgoBCf fcaEbw"
/>
`;

exports[`should render pre 1`] = `
<pre
  className="sc-jAaTju jbvUAg"
/>
`;

exports[`should render q 1`] = `
<q
  className="sc-eHgmQL bXHnTU"
/>
`;

exports[`should render section 1`] = `
<section
  className="sc-htoDjs cbyjIB"
/>
`;

exports[`should render select 1`] = `
<select
  className="sc-cHGsZl fuReHN"
/>
`;

exports[`should render small 1`] = `
<small
  className="sc-jKJlTe dfwGwj"
/>
`;

exports[`should render span 1`] = `
<span
  className="sc-kpOJdX cRofWh"
/>
`;

exports[`should render strong 1`] = `
<strong
  className="sc-ckVGcZ fVOuLm"
/>
`;

exports[`should render sub 1`] = `
<sub
  className="sc-eNQAEJ bWqXSa"
/>
`;

exports[`should render sup 1`] = `
<sup
  className="sc-hMqMXs clnLgV"
/>
`;

exports[`should render table 1`] = `
<table
  className="sc-kgAjT bSSObb"
/>
`;

exports[`should render tbody 1`] = `
<tbody
  className="sc-cJSrbW kGpUoN"
/>
`;

exports[`should render td 1`] = `
<td
  className="sc-kvZOFW bgePIV"
/>
`;

exports[`should render text 1`] = `
<p
  className="sc-chPdSV bwSfnI"
/>
`;

exports[`should render textarea 1`] = `
<textarea
  className="sc-TOsTZ dsWtGp"
/>
`;

exports[`should render tfoot 1`] = `
<tfoot
  className="sc-hqyNC cnQJYy"
/>
`;

exports[`should render th 1`] = `
<th
  className="sc-hmzhuo huQHRu"
/>
`;

exports[`should render thead 1`] = `
<thead
  className="sc-ksYbfQ hxrlCN"
/>
`;

exports[`should render time 1`] = `
<time
  className="sc-cMljjf iIhkwM"
/>
`;

exports[`should render tr 1`] = `
<tr
  className="sc-frDJqD gYMFde"
/>
`;

exports[`should render u 1`] = `
<u
  className="sc-kEYyzF jCCqPv"
/>
`;

exports[`should render ul 1`] = `
<ul
  className="sc-jlyJG gJcCnR"
/>
`;

exports[`should render video 1`] = `
<video
  className="sc-jnlKLf ldjgUm"
/>
`;
